// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecDateRangeFilter should render properly when all the props are given 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-date-range-filter__trigger"
>
  <ecpopover-stub
    offset="0, 8"
    placement="bottom"
    popper-options="[object Object]"
  >
    <div
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
    >
      <button
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        type="button"
      >
        Due date
      </button>
       
      <span
        class="ec-filter-popover__badge"
        data-test="ec-filter-popover__badge"
      >
         2
      
      </span>
       
      <svg
        class="ec-filter-popover__icon ec-icon ec-icon--interactive"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </div>
     
    <div
      class="ec-filter-popover__filter-content"
    >
      <div
        class="ec-date-range-filter"
        data-test="ec-date-range-filter"
      >
        <div
          class="ec-date-range-filter__inputs-wrapper"
        >
          <div
            class="ec-input-field ec-date-range-filter__from-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-input-field-5"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                From
                <!---->
              </span>
               
              <!---->
            </label>
             
            <input
              class="ec-input-field__input"
              data-test="ec-date-range-filter__from-input ec-input-field__input"
              id="ec-input-field-5"
              max="2020-04-10"
              placeholder="dd/mm/yyyy"
              type="date"
            />
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="ec-input-field ec-date-range-filter__to-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-input-field-6"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                To
                <!---->
              </span>
               
              <!---->
            </label>
             
            <input
              class="ec-input-field__input"
              data-test="ec-date-range-filter__to-input ec-input-field__input"
              id="ec-input-field-6"
              min="2020-03-14"
              placeholder="dd/mm/yyyy"
              type="date"
            />
             
            <!---->
             
            <!---->
          </div>
        </div>
         
        <button
          class="ec-date-range-filter__clear-button"
          data-test="ec-date-range-filter__clear-button"
          type="button"
        >
          Clear dates
        </button>
      </div>
    </div>
  </ecpopover-stub>
</div>
`;

exports[`ecDateRangeFilter should render properly with an error message when the errorMessage is given 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-date-range-filter__trigger"
>
  <ecpopover-stub
    offset="0, 8"
    placement="bottom"
    popper-options="[object Object]"
  >
    <div
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
    >
      <button
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        type="button"
      >
        Due date
      </button>
       
      <span
        class="ec-filter-popover__badge"
        data-test="ec-filter-popover__badge"
      >
         2
      
      </span>
       
      <svg
        class="ec-filter-popover__icon ec-icon ec-icon--interactive"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </div>
     
    <div
      class="ec-filter-popover__filter-content"
    >
      <div
        class="ec-date-range-filter"
        data-test="ec-date-range-filter"
      >
        <div
          class="ec-date-range-filter__inputs-wrapper"
        >
          <div
            class="ec-input-field ec-date-range-filter__from-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-input-field-12"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                From
                <!---->
              </span>
               
              <!---->
            </label>
             
            <input
              aria-describedby="ec-input-field-error-12"
              class="ec-input-field__input ec-input-field__input--has-error"
              data-test="ec-date-range-filter__from-input ec-input-field__input"
              id="ec-input-field-12"
              max="2020-04-10"
              placeholder="dd/mm/yyyy"
              type="date"
            />
             
            <!---->
             
            <div
              class="ec-input-field__error-text"
              data-test="ec-input-field__error-text"
              id="ec-input-field-error-12"
            >
              This is an error message
            </div>
          </div>
           
          <div
            class="ec-input-field ec-date-range-filter__to-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-input-field-13"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                To
                <!---->
              </span>
               
              <!---->
            </label>
             
            <input
              class="ec-input-field__input"
              data-test="ec-date-range-filter__to-input ec-input-field__input"
              id="ec-input-field-13"
              min="2020-03-14"
              placeholder="dd/mm/yyyy"
              type="date"
            />
             
            <!---->
             
            <!---->
          </div>
        </div>
         
        <button
          class="ec-date-range-filter__clear-button"
          data-test="ec-date-range-filter__clear-button"
          type="button"
        >
          Clear dates
        </button>
      </div>
    </div>
  </ecpopover-stub>
</div>
`;
